app/traffic/bank-gateway-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bank-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank
spec:
  hosts:
  - "*"
  gateways:
  - bank-gateway
  http:
  - match:
    - uri:
        exact: /check-account
    - uri:
        exact: /withdraw
    route:
    - destination:
        host: bank-access-service
        port:
            number: 8080
  - match:
    - uri:
        exact: /
    - uri:
        exact: /login
    - uri:
        exact: /logout
    route:
    - destination:
        host: bank-auth-service
        port:
          number: 8081
