app/traffic/virtual-service-ab.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-reception-service
spec:
  hosts:
  - bank-reception-service
  http:
  - route:
    - destination:
        host: bank-reception-service
        subset: v1
      weight: 80
    - destination:
        host: bank-reception-service
        subset: v2
      weight: 20

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-request-processing-service
spec:
  hosts:
  - bank-request-processing-service
  http:
  - route:
    - destination:
        host: bank-request-processing-service
        subset: v1
      weight: 20
    - destination:
        host: bank-request-processing-service
        subset: v2
      weight: 80
---
