app/traffic/virtual-service-all-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-access-service
spec:
  hosts:
  - bank-access-service
  http:
  - route:
    - destination:
        host: bank-access-service
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-reception-service
spec:
  hosts:
  - bank-reception-service
  http:
  - route:
    - destination:
        host: bank-reception-service
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-request-processing-service
spec:
  hosts:
  - bank-request-processing-service
  http:
  - route:
    - destination:
        host: bank-request-processing-service
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bank-result-service
spec:
  hosts:
  - bank-result-service
  http:
  - route:
    - destination:
        host: bank-result-service
        subset: v2
---
